docs: 更新 README.md，补充共享业务逻辑类名规范，移除 JVM 启动参数部分